# mnemosynce

./: .env.example  .gitignore  ISSUES.md  README.md  backup.sh  log.db  pyproject.toml  sync_backup_to_remote.sh
.github/workflows/: docker-image.yml  docs.yml  test.yml
docker/: Dockerfile  docker-compose.example.yml
docs/: backup_task.md  config_file.md  email_report.md  main.md
docs-site/: zensical.toml
docs-site/docs/: index.md
docs-site/docs/developer/: architecture.md  backup-engine.md  config-reference.md  index.md  setup-wizard.md  setup.md  testing.md  web-app.md
docs-site/docs/user/: configuration.md  docker.md  index.md  installation.md  monitoring.md  restoring.md  scheduling.md  setup-wizard.md  ssh-keys.md
docs-site/site/: 404.html  index.html  search.json
docs-site/site/developer/: index.html
docs-site/site/developer/architecture/: index.html
docs-site/site/user/: index.html
src/backup_server/: backup.sh  backup_task.py  cleanup.py  config_file.py  database.py  delete_old_backups.sh  email_report.py  logging_config.py  main.py
src/backup_server/templates/: status_template.html  status_template.txt
src/config/: config.py
src/web/: app.py  auth.py  dashboard_data.py  run_state.py  scheduler.py  setup_guard.py  setup_state.py
src/web/routes/: config_editor.py  connections.py  dashboard.py  main.py  progress.py  schedule.py  setup_wizard.py  ssh_keys.py
tests/: conftest.py  helpers.py  test_backup_task.py  test_config_file.py  test_database.py  test_email_report.py  test_functional.py  test_main.py  test_setup_wizard.py
(+30 files in other folders)
